objects/Activity.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanGoal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal this task is meant to address</description>
        <inlineHelpText>Goal this task is meant to address</inlineHelpText>
        <label>Goal</label>
        <referenceTo>HealthCloudGA__CarePlanGoal__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Problem this task is mean to address</description>
        <inlineHelpText>Problem this task is mean to address</inlineHelpText>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Counselling</fullName>
                </value>
                <value>
                    <fullName>Vaccination</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Conditions_Status__c</fullName>
        <label>Condition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluated - No Risk</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic</fullName>
                </value>
                <value>
                    <fullName>Asymptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Symptomatic</fullName>
                </value>
                <value>
                    <fullName>Symptomatic - Declined to Participate</fullName>
                </value>
                <value>
                    <fullName>Cured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Contract_Tracing_Status__c</fullName>
        <label>Contract Tracing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Monitored_at_Home__c</fullName>
        <label>Monitored at Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaskType__c</fullName>
        <label>TaskType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uncategorized</fullName>
                    <default>true</default>
                    <label>Uncategorized</label>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Nonclinical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Testing Recommended</fullName>
                </value>
                <value>
                    <fullName>Test Scheduled</fullName>
                </value>
                <value>
                    <fullName>Test Results Pending</fullName>
                </value>
                <value>
                    <fullName>Negative Test</fullName>
                </value>
                <value>
                    <fullName>Positive Test</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>